fix z-indexing of taskbar/windows

--- a/frontend/client/src/components/Taskbar/Taskbar.css
+++ b/frontend/client/src/components/Taskbar/Taskbar.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 0;
 }
 
 .apps {
@@ -23,11 +24,17 @@
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+  z-index: 1;
+}
+
+.taskbar-line {
+  z-index: 1;
 }
 
 .taskbar-line.before-clock {
   position: absolute;
   right: 100px;
+  z-index: 1;
 }
 
 .time {
@@ -42,4 +49,5 @@
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+  z-index: 1;
 }
