--- a/frontend/client/src/components/Window/Window.css
+++ b/frontend/client/src/components/Window/Window.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
+  z-index: 2;
 }
 
 .handle-text {
